--- a/.github/workflows/flutter-pipeline.yml
+++ b/.github/workflows/flutter-pipeline.yml
@@ -19,8 +19,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.24.3' # Replace with the latest stable version
-
+        flutter-version: '3.24.3'
     - name: Upgrade Flutter
       run: flutter upgrade
 
